apps/smart-home/node-red/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
  namespace: node-red
  labels:
    app.kubernetes.io/name: node-red
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: node-red
  template:
    metadata:
      namespace: node-red
      labels:
        app.kubernetes.io/name: node-red
    spec:
      containers:
        - name: node-red
          image: nodered/node-red:1.0.6-12
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 1880
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
            - name: settings
              mountPath: /data/settings.js
              subPath: settings.js
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: node-red-data
        - name: settings
          configMap:
              name: node-red-settings
      nodeSelector:
        kubernetes.io/hostname: sentinel
      securityContext:
        fsGroup: 1001
