apps/smart-home/node-red/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node-red
  namespace: node-red
  labels:
    app.kubernetes.io/name: node-red
spec:
  type: ClusterIP
  ports:
    - port: 1880
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: node-red
