apps/smart-home/node-red/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red
  namespace: node-red
  labels:
    app.kubernetes.io/name: node-red
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: internal
spec:
  tls:
    - hosts:
        - node-red.private.channings.me
      secretName: node-red-tls
  rules:
    - host: node-red.private.channings.me
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: node-red
                port:
                  name: http
